dev/app/styles/main.css
html{
  min-height: 100%;
}
body{
  background-image: url('../images/blur2.png');  
  background-repeat: no-repeat;
  background-position: right center;
  background-size: cover;
  overflow-x: hidden; 
  min-height: 100%;
}
h1, h2, h3, h4, h5, h6{
  color:white;
  font-family: 'Raleway', sans-serif;
}
h3{
  margin-top: 5px;
}
hr{
  border-color: grey;
  margin-top:-5pt;
}
a:link, a:active, a:visited, a:hover{
    color:white;
}
.icon{
  text-align: center;
  color:white;
}

.icon span{
  font-size: 32pt;
}
.icon a{
  text-decoration: none;

}
#back{
  font-size: 48px;
  text-align: left;
  position: absolute;
  margin-left: 1%;
  margin-top:-0.5em;
  padding-left: 20px;
  padding-right: 20px;
  display: none;
}
.slide{
  animation-duration: .5s;
  animation-name: slide;
}
#title{
  margin-bottom:0px;
  margin-right: 5px;
  text-align:right;
}
#me{
  padding-right: 0px;
}
#me img{
  border: 2px solid black;
  margin-top: 10px;
  margin-bottom: 10px;
  width:100%;
}
#navigation-list{
  padding-left:0px;
}
@keyframes slide{
  from{
    margin-left: 100%;
  }
  to{
    margin-left: 1%;
  }
}
@media (min-width: 768px){
  #me img{
    width: 30%;
  }
}

